language/move-lang/tests/move_check/parser/unexpected_token_after_ability_modifier.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/unexpected_token_after_ability_modifier.move:4:25
  │
4 │     struct Foo has copy & drop {}
  │                         ^
  │                         │
  │                         Unexpected '&'
  │                         Expected one of: ',', '{', or ';'

