language/move-lang/tests/move_check/parser/unexpected_token_after_ability_modifier.move
address 0x42 {
module M {
    // incorrect delim for ability modifiers
    struct Foo has copy & drop {}
}
}
